 * language and i18n:
   * new and updated manual: Serbian
   * updated translations: Bulgarian, Chinese, Czech, Dutch, French, German,
     Italian, Polish, Serbian, Slovenian, Spanish, Swedish
   * updated DejaVuSans font to version 2.17
 * multiplayer maps:
   * revised maps: Den of Onis, Hamlets, Meteor Lake, Sablestone Delta,
     Silverhead Crossing, Blue Water Province, Wilderlands
 * misc:
   * corrected all wrong image references found via macroscope

Version 1.2.4:
 * campaigns:
   * Heir to the Throne
     * updated images for Delfador
   * Tutorial
     * merged all unit images used in the tutorial from httt
 * graphics:
   * fixed a missing frame for the white mage
   * improved the mage of light melee animation and changed its melee attack to
     "morning star"
   * improved the look of the main menu and tips of the day boxes in the
     title screen
   * tiles with overlays are also properly shown if compiled with
     --enable-tinygui (bug #8720 patch #697)
 * language and i18n:
   * updated manual: French
   * updated translations: Bulgarian, Chinese, Danish, Dutch, Esperanto, French,
     German, Greek, Italian, Portuguese (Brazil), Serbian, Slovak, Spanish, Swedish
   * updated DejaVuSans font to version 2.16
 * multiplayer maps:
   * revised maps: Blitz, Wilderlands
 * WML:
   * fixed the fire dragon die sound in TROW
   * fixed many agression->aggression typos
   * fixed [special_filter] not working properly (#8212)
 * Python AI:
   * backported safe AI from 1.3, so you can no longer use import, builtin
     statements, or access to internal variables in AI scripts
   * fixed bugs where movement maps weren't updated after recruiting (bug #8802)
     and where some unit type properties where always false (like regenerate or
     heals)
 * misc:
   * observer can save a replay of the game again
   * fixed beginning-of-scenario saves containing scenario WML (bug #8698)
   * fixed autosaves not getting deleted for last campaign scenario and