@@ -1223,7 +1223,7 @@ bool game_controller::play_multiplayer()
 		} else if(res == 0 || res == 1) {
 			std::string host;
 			if(res == 0) {
-				host = preferences::official_network_host();
+				host = preferences::server_list().front().address;
 			}
 
 			mp::start_client(disp(), game_config_, units_data_, host);
