@@ -12,6 +12,8 @@ Version 1.2.4+svn:
  * multiplayer maps:
    * revised maps: Den of Onis, Hamlets, Meteor Lake, Sablestone Delta,
      Silverhead Crossing, Blue Water Province, Wilderlands
+ * user interface:
+   * ability to view a list of MP servers with the Join Game dialog   
  * misc:
    * corrected all wrong image references found via macroscope
 
